Enhance macOS style design
- Add macOS window controls (red, yellow, green buttons) to glass cards
- Upgrade card hover effects with 3D perspective transforms
- Add Dock-style navigation with scale and wave effects
- Add Spotlight-style search box styling
- Add window-controls div to profile cards

--- a/Chinese.qmd
+++ b/Chinese.qmd
@@ -7,6 +7,8 @@ editor:
 
 ::: {.hero-section}
 ::: {.profile-card}
+::: {.window-controls}
+:::
 ![Quanjia Xiao](images/site-logo.png)
 
 # 肖权珈 (Quanjia Xiao)
